# neura-orbit-agent

./: .env.example  .gitignore  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml  test_2025_system.py  test_browser_automation.py  test_control.py  test_direct_automation.py
config/: config.example.yaml
src/neura_orbit_agent/: __init__.py
src/neura_orbit_agent/automation/: __init__.py  app_automation.py  browser_automation.py  file_operations.py
src/neura_orbit_agent/cli/: __init__.py  main.py
src/neura_orbit_agent/core/: __init__.py  advanced_agent_brain.py  agent_brain.py  llm_manager.py  screen_capture.py  system_controller.py
src/neura_orbit_agent/integrations/: __init__.py  anthropic_client.py  base_client.py  ollama_client.py  openai_client.py
src/neura_orbit_agent/planning/: __init__.py  intelligent_planner.py
src/neura_orbit_agent/recovery/: __init__.py  self_healing.py
src/neura_orbit_agent/security/: __init__.py  permission_manager.py
src/neura_orbit_agent/utils/: __init__.py  config.py  exceptions.py  logger.py
src/neura_orbit_agent/vision/: __init__.py  intelligent_vision.py
tests/: __init__.py  test_agent_brain.py  test_config.py  test_screen_capture.py
